@@ -10,6 +10,7 @@ DIST octave-3.2.0.tar.bz2 12011861 RMD160 88935c2f560a7bc400d0ca182be0189b7c7df9
 DIST octave-3.2.3.tar.bz2 12085781 RMD160 30c1892544ba67054f1888758ebc2b1ede8848c0 SHA1 7a188ffd55ac1efb2f480fa2aed94e66d3596f34 SHA256 309b486825f0b576b7581344a4946bbd8c4cde75c32a2515ae0cfc09a7975fda
 EBUILD octave-3.0.3.ebuild 2691 RMD160 809e222a0ef9dba234045d0984a3bb81a3af2ad1 SHA1 04b95885f9ac3f610f17f449c0d20bf89b938b81 SHA256 4026a63a456bb8dfb862387f551b55257bb0e3e37620956acf959c4058192233
 EBUILD octave-3.2.0.ebuild 2546 RMD160 9f7cda03db905e44ce9398a7f0557de5f45c0677 SHA1 38d292c0604ec6496fb2e16a5c5bc56456130bdb SHA256 ed4e01725c46454ee1c56b3eae07c9f3c1fcbad9d4f13c7a31fad0cb6153020b
+EBUILD octave-3.2.3-r1.ebuild 2560 RMD160 9607c9de2537c693631ef56d713f773af4ab3fb8 SHA1 4886ec3579bfa51e6a64c6bf5c37fe00a370a320 SHA256 9e819d1e16a598dc3849850c8dcdec6beff2bd2c6536f3a2e4020b3c851a29ea
 EBUILD octave-3.2.3.ebuild 2518 RMD160 9d76fbbfe0dd0814d90274d393db7d999539979b SHA1 500f62928b43ddaf8137f12e3b56143d02bc7928 SHA256 fdf3a1b990934563655795c8fd34cdd9a80f6bed2ad5903d3e0cbe3f81fe6d79
-MISC ChangeLog 20803 RMD160 8e7b291ce4a15c7456bf409bc5d9ef3cc85be7af SHA1 44b2acb4674a6cbff1a8e3d5e9a62721532cc082 SHA256 d87a88b86299648f6a74ee043175776f72f06b77c2c6319d541d235e3a249799
+MISC ChangeLog 21017 RMD160 91e0d366a174fdcb88f416e87ed35a1b79f3ced1 SHA1 2c699336c4ffcd28b07e05e7b9c5a1d23030b5a8 SHA256 b3a9a579053e61b71284935713c9f39f71373bfdca1804f054e356a26c256426
 MISC metadata.xml 260 RMD160 27a4292b758e1199d0092b731cba79033f1b4167 SHA1 9997a99a4d6115f3b901208ba711d735ce9be36e SHA256 5fda55fd44bfec5755e1c3ac828887c37f0eebed6b3b972454e123ac2472d3ff
